@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.581 2006/02/21 19:50:22 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.582 2006/03/12 19:03:34 wolf31o2 Exp $
+
+  12 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/rc-update.sh:
+  Removed hdparm and alsasound from rc-update.sh as they are pulled in by the
+  autoconfig script.
 
   21 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/livecdfs-update.sh:
